--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -1044,7 +1044,7 @@
 % \subsection{Variables and constants}
 %
 %    \begin{macrocode}
-%<*!2ekernel|package>
+%<*core|initex>
 %    \end{macrocode}
 %
 % \begin{variable}{\c_@@_special_chars_seq}
@@ -1913,7 +1913,7 @@
         \@@_bad_def:wn
       }
   }
-%</!2ekernel|package>
+%</core|initex>
 %<*package>
 \cs_gset_protected:Npn \@@_normalize_arg_spec_loop:n #1
   {
@@ -1927,7 +1927,7 @@
       }
   }
 %</package>
-%<*!2ekernel|package>
+%<*core|initex>
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1974,12 +1974,12 @@
       { \@@_normalize_type_t:w * }
   }
 \exp_args:No \@@_tmp:w { \c_novalue_tl }
-%</!2ekernel|package>
+%</core|initex>
 %<*package>
 \cs_new_protected:Npx \@@_normalize_type_g:w
   { \exp_not:N \@@_normalize_type_G:w { \exp_not:V \c_novalue_tl } }
 %</package>
-%<*!2ekernel|package>
+%<*core|initex>
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2093,7 +2093,7 @@
         \@@_normalize_E_unique_check:w #2 \q_stop
       }
   }
-%</!2ekernel|package>
+%</core|initex>
 %<*package>
 \cs_new_protected:Npn \@@_normalize_type_G:w #1
   {
@@ -2104,7 +2104,7 @@
     \@@_normalize_arg_spec_loop:n
   }
 %</package>
-%<*!2ekernel|package>
+%<*core|initex>
 \cs_new_protected:Npn \@@_normalize_type_t:w #1
   {
     \quark_if_recursion_tail_stop_do:Nn #1 { \@@_bad_arg_spec:wn }
@@ -2141,7 +2141,7 @@
 %   \cs{l_@@_arg_spec_tl}, count the mandatory argument, and empty the
 %   list of last delimiters.
 %    \begin{macrocode}
-%</!2ekernel|package>
+%</core|initex>
 %<*package>
 \cs_new_protected:Npn \@@_normalize_type_l:w
   {
@@ -2150,7 +2150,7 @@
     \@@_normalize_arg_spec_loop:n
   }
 %</package>
-%<*!2ekernel|package>
+%<*core|initex>
 \cs_new_protected:Npn \@@_normalize_type_m:w
   {
     \@@_delimiter_check:nnn { } { m } { \iow_char:N \{ }
@@ -2167,7 +2167,7 @@
     \@@_add_arg_spec_mandatory:n { R #1 #2 {#3} }
     \@@_normalize_arg_spec_loop:n
   }
-%</!2ekernel|package>
+%</core|initex>
 %<*package>
 \cs_new_protected:Npn \@@_normalize_type_u:w #1
   {
@@ -2177,7 +2177,7 @@
     \@@_normalize_arg_spec_loop:n
   }
 %</package>
-%<*!2ekernel|package>
+%<*core|initex>
 \cs_new_protected:Npn \@@_normalize_type_v:w
   {
     \@@_normalize_check_gv:N v
@@ -2536,7 +2536,7 @@
 %   For the \texttt{G} type, the grabber and the default are added to the
 %   signature.
 %    \begin{macrocode}
-%</!2ekernel|package>
+%</core|initex>
 %<*package>
 \cs_new_protected:Npn \@@_add_type_G:w #1
   {
@@ -2560,7 +2560,7 @@
     \@@_prepare_signature:N
   }
 %</package>
-%<*!2ekernel|package>
+%<*core|initex>
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2616,7 +2616,7 @@
 %   At the set up stage, the \texttt{u} type argument is identical to the
 %   \texttt{G} type except for the name of the grabber function.
 %    \begin{macrocode}
-%</!2ekernel|package>
+%</core|initex>
 %<*package>
 \cs_new_protected:Npn \@@_add_type_u:w #1
   {
@@ -2627,7 +2627,7 @@
     \@@_prepare_signature:N
   }
 %</package>
-%<*!2ekernel|package>
+%<*core|initex>
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2846,12 +2846,12 @@
 %   parameter text ends with |#| in fact end up being delimited by an
 %   open brace.
 %    \begin{macrocode}
-%</!2ekernel|package>
+%</core|initex>
 %<*package>
 \cs_new_protected:Npn \@@_add_expandable_type_l:w
   { \@@_add_expandable_type_u:w ## }
 %</package>
-%<*!2ekernel|package>
+%<*core|initex>
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2900,7 +2900,7 @@
 %   Define an auxiliary that will be used directly in the signature.  It
 %   grabs one argument delimited by |#1| and places it before \cs{q_@@}.
 %    \begin{macrocode}
-%</!2ekernel|package>
+%</core|initex>
 %<*package>
 \cs_new_protected:Npn \@@_add_expandable_type_u:w #1
   {
@@ -2915,7 +2915,7 @@
     \@@_prepare_signature:N
   }
 %</package>
-%<*!2ekernel|package>
+%<*core|initex>
 %    \end{macrocode}
 % \end{macro}
 %
@@ -3319,7 +3319,7 @@
 %   Optional groups are checked by meaning, so that the same code will
 %   work with, for example, \ConTeXt{}-like input.
 %    \begin{macrocode}
-%</!2ekernel|package>
+%</core|initex>
 %<*package>
 \cs_new_protected:Npn \@@_grab_G:w #1 \@@_run_code:
   {
@@ -3351,7 +3351,7 @@
       { \@@_add_arg:o \c_novalue_tl }
   }
 %</package>
-%<*!2ekernel|package>
+%<*core|initex>
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -3364,7 +3364,7 @@
 % \begin{macro}{\@@_grab_l_aux:nN}
 %   Argument grabbers for mandatory \TeX{} arguments are pretty simple.
 %    \begin{macrocode}
-%</!2ekernel|package>
+%</core|initex>
 %<*package>
 \cs_new_protected:Npn \@@_grab_l:w #1 \@@_run_code:
   { \@@_grab_l_aux:nN {#1} \cs_set_protected_nopar:Npn }
@@ -3378,7 +3378,7 @@
     \l_@@_fn_tl
   }
 %</package>
-%<*!2ekernel|package>
+%<*core|initex>
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -3550,7 +3550,7 @@
 %   Grabbing up to a list of tokens is quite easy: define the grabber,
 %   and then collect.
 %    \begin{macrocode}
-%</!2ekernel|package>
+%</core|initex>
 %<*package>
 \cs_new_protected:Npn \@@_grab_u:w #1#2 \@@_run_code:
   { \@@_grab_u_aux:nnN {#1} {#2} \cs_set_protected_nopar:Npn }
@@ -3564,7 +3564,7 @@
     \l_@@_fn_tl
   }
 %</package>
-%<*!2ekernel|package>
+%<*core|initex>
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -5203,7 +5203,7 @@
 %<*core>
 \@@_file_end_hook:
 %</core>
-%</!2ekernel|package>
+%</core|initex>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
