\ProvidesExpl<thing> even if \Provides<thing> is not yet defined

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1156,23 +1156,40 @@
 %
 % \begin{macro}{\ProvidesExplPackage, \ProvidesExplClass, \ProvidesExplFile}
 %   For other packages and classes building on this one it is convenient
-%   not to need \cs{ExplSyntaxOn} each time.
+%   not to need \cs{ExplSyntaxOn} each time.  All macros use the same
+%   internal one with the proper \LaTeXe{} command.
 %    \begin{macrocode}
-\protected\def\ProvidesExplPackage#1#2#3#4%
+\protected\def\ProvidesExplPackage
+  {\@expl@provides@file@@Nnnnnn\ProvidesPackage{Package}}
+\protected\def\ProvidesExplClass
+  {\@expl@provides@file@@Nnnnnn\ProvidesClass{Document Class}}
+\protected\def\ProvidesExplFile
+  {\@expl@provides@file@@Nnnnnn\ProvidesFile{File}}
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\@expl@provides@file@@Nnnnnn, \@expl@provides@generic@@wnnw}
+%   We need to check the existence of the
+%   \cs[no-index]{Provides\meta{thing}}, since we need to load this very
+%   early in the \LaTeXe{} kernel.
+%    \begin{macrocode}
+\protected\long\def\@expl@provides@file@@Nnnnnn#1#2#3#4#5#6%
   {%
-    \ProvidesPackage{#1}[#2 \ifx\relax#3\relax\else v#3\space\fi #4]%
+    \ifnum0%
+        \ifdefined#11\fi
+        \ifx\relax#1\else1\fi
+        =11
+      \expandafter#1%
+    \else
+      \@expl@provides@generic@@wnnw{#2}%
+    \fi
+      {#3}[{#4 \ifx\relax#5\relax\else v#5\space\fi #6}]%
     \ExplSyntaxOn
-  }%
-\protected\def\ProvidesExplClass#1#2#3#4%
+  }
+\protected\long\def\@expl@provides@generic@@wnnw#1\fi#2[#3]%
   {%
-    \ProvidesClass{#1}[#2 \ifx\relax#3\relax\else v#3\space\fi #4]%
-    \ExplSyntaxOn
-  }%
-\protected\def\ProvidesExplFile#1#2#3#4%
-  {%
-    \ProvidesFile{#1}[#2 \ifx\relax#3\relax\else v#3\space\fi #4]%
-    \ExplSyntaxOn
-  }%
+    \immediate\write-1{#1: #2 #3}%
+  }
 %    \end{macrocode}
 % \end{macro}
 %
