Use the correct functions

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1243,7 +1243,7 @@
 %   \cs{g_@@_reload_bool} doesn't necessarily mean that the variable
 %   is already declared.
 %    \begin{macrocode}
-\cs_if_exist:NF \c_@@_def_ext_tl
+\tl_if_exist:NF \c_@@_def_ext_tl
   { \tl_const:Nn \c_@@_def_ext_tl { def } }
 %    \end{macrocode}
 % \end{variable}
@@ -1283,7 +1283,7 @@
 % \begin{variable}{\l_@@_options_clist}
 %    \begin{macrocode}
 %<*!2ekernel>
-\cs_if_exist:NF \l_@@_options_clist
+\clist_if_exist:NF \l_@@_options_clist
   { \clist_new:N \l_@@_options_clist }
 \DeclareOption*
   { \clist_put_right:NV \l_@@_options_clist \CurrentOption }
