--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1404,6 +1404,7 @@
   {
     \cs_gset_eq:NN \__kernel_sys_configuration_load:n
       \__kernel_sys_configuration_load_std:n
+    \ExplSyntaxOff
     \endinput
   }
 %</!2ekernel>
