\endinput -> \file_input_stop:

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1405,7 +1405,7 @@
     \cs_gset_eq:NN \__kernel_sys_configuration_load:n
       \__kernel_sys_configuration_load_std:n
     \ExplSyntaxOff
-    \endinput
+    \file_input_stop:
   }
 %</!2ekernel>
 %    \end{macrocode}
