--- a/l3backend/l3backend-draw.dtx
+++ b/l3backend/l3backend-draw.dtx
@@ -335,8 +335,8 @@
 %
 % \begin{macro}
 %   {
-%     \@@_backend_color_fill_cmyk:nnnn   ,
-%     \@@_backend_color_stroke_cmyk:nnnn
+%     \@@_backend_color_fill_cmyk:n   ,
+%     \@@_backend_color_stroke_cmyk:n
 %   }
 % \begin{macro}
 %   {
@@ -345,63 +345,37 @@
 %   }
 % \begin{macro}
 %   {
-%     \@@_backend_color_fill_rgb:nnn   ,
-%     \@@_backend_color_stroke_rgb:nnn
+%     \@@_backend_color_fill_rgb:n   ,
+%     \@@_backend_color_stroke_rgb:n
 %   }
-% \begin{macro}
-%   {
-%     \@@_backend_color_fill:n, \@@_backend_color_fill:x,
-%     \@@_backend_color_stroke:n, \@@_backend_color_stroke:x
-%   }
+% \begin{macro}{\@@_backend_color_fill:n, \@@_backend_color_stroke:n}
 %   For \texttt{dvips}, we can use the standard color stack to deal with
 %   stroke color, but for fills have to switch to raw PostScript. This is
 %   thus not handled by the stack, but the context is very restricted. See
 %   also how fills are implemented.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_backend_color_fill_cmyk:nnnn #1#2#3#4
-  {
-    \@@_backend_color_fill:x
-      {
-        \fp_eval:n {#1} ~ \fp_eval:n {#2} ~
-        \fp_eval:n {#3} ~ \fp_eval:n {#4} ~
-        setcmykcolor
-      }
-  }
-\cs_new_protected:Npn \@@_backend_color_stroke_cmyk:nnnn #1#2#3#4
-  {
-    \@@_backend_color_stroke:x
-      {
-        cmyk ~
-        \fp_eval:n {#1} ~ \fp_eval:n {#2} ~
-        \fp_eval:n {#3} ~ \fp_eval:n {#4}
-      }
-  }
-\cs_new_protected:Npn \@@_backend_color_fill_gray:n #1
-  { \@@_backend_color_fill:x { \fp_eval:n {#1} ~ setgray } }
+\cs_new_protected:Npn \@@_backend_color_fill_cmyk:n #1
+  { \@@_backend_color_fill:n { #1 ~ setcmykcolor } }
+\cs_new_protected:Npn \@@_backend_color_stroke_cmyk:n #1
+  { \@@_backend_color_stroke:n { cmyk ~ #1 } }
 \cs_new_protected:Npn \@@_backend_color_stroke_gray:n #1
-  { \@@_backend_color_stroke:x { gray ~ \fp_eval:n {#1} } }
-\cs_new_protected:Npn \@@_backend_color_fill_rgb:nnn #1#2#3
-  {
-    \@@_backend_color_fill:x
-      { \fp_eval:n {#1} ~ \fp_eval:n {#2} ~ \fp_eval:n {#3} ~ setrgbcolor }
-  }
-\cs_new_protected:Npn \@@_backend_color_stroke_rgb:nnn #1#2#3
-  {
-    \@@_backend_color_stroke:x
-      { rgb ~ \fp_eval:n {#1} ~ \fp_eval:n {#2} ~ \fp_eval:n {#3} }
-  }
+  { \@@_backend_color_fill:n { #1 ~ setgray } }
+\cs_new_protected:Npn \@@_backend_color_fill_gray:n #1
+  { \@@_backend_color_stroke:n { gray ~ #1 } }
+\cs_new_protected:Npn \@@_backend_color_fill_rgb:n #1
+  { \@@_backend_color_fill:n { #1 ~ setrgbcolor } }
+\cs_new_protected:Npn \@@_backend_color_stroke_rgb:n #1
+  { \@@_backend_color_stroke:n { rgb ~ #1 } }
 \cs_new_protected:Npn \@@_backend_color_fill:n #1
   { 
     \__kernel_backend_postscript:n
       { /color.fc ~ { #1 } ~ def }
   }
-\cs_generate_variant:Nn \@@_backend_color_fill:n { x }
 \cs_new_protected:Npn \@@_backend_color_stroke:n #1
   {
     \__kernel_backend_literal:n { color~push~#1 } 
     \group_insert_after:N \@@_color_reset:
   }
-\cs_generate_variant:Nn \@@_backend_color_stroke:n { x }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -655,8 +629,8 @@
 %
 % \begin{macro}
 %   {
-%     \@@_backend_color_fill_cmyk:nnnn   ,
-%     \@@_backend_color_stroke_cmyk:nnnn
+%     \@@_backend_color_fill_cmyk:n   ,
+%     \@@_backend_color_stroke_cmyk:n
 %   }
 % \begin{macro}
 %   {
@@ -665,46 +639,26 @@
 %   }
 % \begin{macro}
 %   {
-%     \@@_backend_color_fill_rgb:nnn   ,
-%     \@@_backend_color_stroke_rgb:nnn
+%     \@@_backend_color_fill_rgb:n   ,
+%     \@@_backend_color_stroke_rgb:n
 %   }
 % \begin{macro}{\@@_backend_color_select:n, \@@_backend_color_select:x}
 % \begin{macro}{\@@_backend_color_reset:}
 %    Color has to be split between \texttt{(x)dvipdfmx} and the PDF engines
 %    as there is no color stack for fill/stroke separation in the former.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_backend_color_fill_cmyk:nnnn #1#2#3#4
-  {
-    \@@_backend_color_select:x
-      {
-        \fp_eval:n {#1} ~ \fp_eval:n {#2} ~ 
-        \fp_eval:n {#3} ~ \fp_eval:n {#4} ~
-        k
-      }
-  }
-\cs_new_protected:Npn \@@_backend_color_stroke_cmyk:nnnn #1#2#3#4
-  {
-    \@@_backend_color_select:x
-      {
-        \fp_eval:n {#1} ~ \fp_eval:n {#2} ~ 
-        \fp_eval:n {#3} ~ \fp_eval:n {#4} ~
-        k
-      }
-  }
+\cs_new_protected:Npn \@@_backend_color_fill_cmyk:n #1
+  { \@@_backend_color_select:n { #1 ~ k } }
+\cs_new_protected:Npn \@@_backend_color_stroke_cmyk:n #1
+  { \@@_backend_color_select:n { #1 ~ K } }
 \cs_new_protected:Npn \@@_backend_color_fill_gray:n #1
-  { \@@_backend_color_select:x { \fp_eval:n {#1} ~ g } }
+  { \@@_backend_color_select:n { #1 ~ g } }
 \cs_new_protected:Npn \@@_backend_color_stroke_gray:n #1
-  { \@@_backend_color_select:x { \fp_eval:n {#1} ~ G } }
-\cs_new_protected:Npn \@@_backend_color_fill_rgb:nnn #1#2#3
-  {
-    \@@_backend_color_select:x
-      { \fp_eval:n {#1} ~ \fp_eval:n {#2} ~ \fp_eval:n {#3} ~ rg }
-  }
-\cs_new_protected:Npn \@@_backend_color_stroke_rgb:nnn #1#2#3
-  {
-    \@@_backend_color_select:x
-      { \fp_eval:n {#1} ~ \fp_eval:n {#2} ~ \fp_eval:n {#3} ~ RG }
-  }
+  { \@@_backend_color_select:n { #1 ~ G } }
+\cs_new_protected:Npn \@@_backend_color_fill_rgb:n #1
+  { \@@_backend_color_select:n { #1 ~ rg } }
+\cs_new_protected:Npn \@@_backend_color_stroke_rgb:n #1
+  { \@@_backend_color_select:n { #1 ~ RG } }
 %<*pdfmode>
 \cs_new_protected:Npx \@@_backend_color_select:n #1
   {
@@ -1222,43 +1176,41 @@
 %
 % \begin{macro}
 %   {
-%     \@@_backend_color_fill_cmyk:nnnn   ,
-%     \@@_backend_color_stroke_cmyk:nnnn
+%     \@@_backend_color_fill_cmyk:n   ,
+%     \@@_backend_color_stroke_cmyk:n
 %   }
+% \begin{macro}{\@@_backend_color_fill_cmyk:w}
 % \begin{macro}
 %   {
 %     \@@_backend_color_fill_gray:n   ,
 %     \@@_backend_color_stroke_gray:n
 %   }
+% \begin{macro}{\@@_backend_color_gray_aux:n}
 % \begin{macro}
 %   {
-%     \@@_backend_color_fill_rgb:nnn   ,
-%     \@@_backend_color_stroke_rgb:nnn
+%     \@@_backend_color_fill_rgb:n   ,
+%     \@@_backend_color_stroke_rgb:n
 %   }
 % \begin{macro}{\@@_backend_color_fill:nnn}
 %  SVG fill color has to be covered outside of the stack, as for
 %  \texttt{dvips}. Here, we are only allowed RGB colors so there is some
 %  conversion to do.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_backend_color_fill_cmyk:nnnn #1#2#3#4
+\cs_new_protected:Npn \@@_backend_color_fill_cmyk:n #1
+  { \@@_backend_color_fill_cmyk:w #1 \s_@@_stop }
+\cs_new_protected:Npn \@@_backend_color_fill_cmyk:w
+  #1 ~ #2 ~ #3 ~ #4 \s_@@_stop
   {
     \use:x
       {
         \@@_backend_color_fill:nnn
-          { \fp_eval:n { -100 * ( (#1) * ( 1 - (#4) ) - 1 ) } }
-          { \fp_eval:n { -100 * ( (#2) * ( 1 - (#4) ) + #4 - 1 ) } }
-          { \fp_eval:n { -100 * ( (#3) * ( 1 - (#4) ) + #4 - 1 ) } }
+          { \fp_eval:n { -100 * ( 1 - min ( 1 , #1 + #4 ) ) } }
+          { \fp_eval:n { -100 * ( 1 - min ( 1 , #2 + #4 ) ) } }
+          { \fp_eval:n { -100 * ( 1 - min ( 1 , #3 + #4 ) ) } }
       }
   }
-\cs_new_protected:Npn \@@_backend_color_stroke_cmyk:nnnn #1#2#3#4
-  {
-    \@@_backend_select:x
-      {
-        cmyk~
-        \fp_eval:n {#1} ~ \fp_eval:n {#2} ~
-        \fp_eval:n {#3} ~ \fp_eval:n {#4}
-      }
-  }
+\cs_new_protected:Npn \@@_backend_color_stroke_cmyk:n #1
+  { \@@_backend_select:n { cmyk ~ #1 } }
 \cs_new_protected:Npn \@@_backend_color_fill_gray:n #1
   {
     \use:x
@@ -1271,7 +1223,7 @@
   { \@@_backend_color_fill:nnn {#1} {#1} {#1} }
 \cs_new_protected:Npn \@@_backend_color_stroke_gray:n #1
   { \@@_backend_select:x { gray~ \fp_eval:n {#1} } }
-\cs_new_protected:Npn \@@_backend_color_fill_rgb:nnn #1#2#3
+\cs_new_protected:Npn \@@_backend_color_fill_rgb:n #1
   {
     \use:x
       {
@@ -1296,12 +1248,11 @@
          "
       }
   }
-\cs_new_protected:Npn \@@_backend_color_stroke_rgb:nnn #1#2#3
-  {
-    \@@_backend_select:x
-      { rgb~ \fp_eval:n {#1} ~ \fp_eval:n {#2} ~ \fp_eval:n {#3} }
-  }
+\cs_new_protected:Npn \@@_backend_color_stroke_rgb:n #1
+  { \@@_backend_select:n { rgb ~ #1 } }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
