--- a/l3experimental/l3draw/l3draw-state.dtx
+++ b/l3experimental/l3draw/l3draw-state.dtx
@@ -172,6 +172,7 @@
   }
 \cs_new_protected:Npn \@@_color:nnn #1#2#3
   { \use:c { @@_backend_color_ #3 _ #1 :n } {#2} }
+%    \end{macrocode}
 % \end{macro}
 % \end{macro}
 % \end{macro}
