--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1457,7 +1457,7 @@
   {
     \exp_args:Nx \__kernel_file_input_push:n
       {
-        \tl_to_str:N \@currname
+        \tl_to_str:N \@currname .
         \tl_to_str:N \@currext
       }
     \tl_put_left:Nx \l_@@_status_stack_tl
