--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -111,11 +111,14 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\@@_backend_cmyk:n}
-% \begin{macro}{\@@_backend_gray:n}
-% \begin{macro}{\@@_backend_rgb:n}
-% \begin{macro}{\@@_backend_spot:n}
-% \begin{macro}{\@@_backend_select:n}
+% \begin{macro}
+%   {
+%     \@@_backend_cmyk:n  ,
+%     \@@_backend_gray:n  ,
+%     \@@_backend_rgb:n   ,
+%     \@@_backend_spot:n  ,
+%     \@@_backend_select:n
+%   }
 % \begin{macro}{\@@_backend_reset:}
 % \begin{macro}{color.fc}
 %    Push the data to the stack. In the case of \texttt{dvips} also reset the
@@ -140,11 +143,6 @@
 \cs_new_protected:Npn \@@_backend_reset:
   { \__kernel_backend_literal:n { color~pop } }
 %    \end{macrocode}
-% \end{macro}
-% \end{macro}
-% \end{macro}
-% \end{macro}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 %
@@ -216,10 +214,13 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}{\@@_backend_cmyk:n}
-% \begin{macro}{\@@_backend_gray:n}
-% \begin{macro}{\@@_backend_rgb:n}
-% \begin{macro}{\@@_backend_spot:n}
+% \begin{macro}
+%   {
+%     \@@_backend_cmyk:n ,
+%     \@@_backend_gray:n ,
+%     \@@_backend_rgb:n  ,
+%     \@@_backend_spot:n
+%   }
 % \begin{macro}{\@@_backend_spot:w}
 % \begin{macro}{\@@_backend_select:n}
 % \begin{macro}{\@@_backend_reset:}
@@ -251,9 +252,6 @@
         \exp_not:N \l__kernel_color_stack_int pop \scan_stop:
   }
 %    \end{macrocode}
-% \end{macro}
-% \end{macro}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
