--- a/l3backend/l3backend-draw.dtx
+++ b/l3backend/l3backend-draw.dtx
@@ -1175,6 +1175,7 @@
 %     \@@_backend_color_fill_rgb:n   ,
 %     \@@_backend_color_stroke_rgb:n
 %   }
+% \begin{macro}{\@@_backend_color_fill_rgb:w}
 % \begin{macro}{\@@_backend_color_fill:nnn}
 %  SVG fill color has to be covered outside of the stack, as for
 %  \texttt{dvips}. Here, we are only allowed RGB colors so there is some
@@ -1208,6 +1209,11 @@
 \cs_new_protected:Npn \@@_backend_color_stroke_gray:n #1
   { \@@_backend_select:x { gray~ \fp_eval:n {#1} } }
 \cs_new_protected:Npn \@@_backend_color_fill_rgb:n #1
+  { \@@_backend_color_fill_rgb:w #1 \s_@@_stop }
+\cs_new_protected:Npn \@@_backend_color_stroke_rgb:n #1
+  { \@@_backend_select:n { rgb ~ #1 } }
+\cs_new_protected:Npn \@@_backend_color_fill_rgb:w
+  #1 ~ #2 ~ #3 \s_@@_stop
   {
     \use:x
       {
@@ -1235,6 +1241,7 @@
 \cs_new_protected:Npn \@@_backend_color_stroke_rgb:n #1
   { \@@_backend_select:n { rgb ~ #1 } }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
